--- a/_config.yml
+++ b/_config.yml
@@ -13,16 +13,15 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Jekyll on Render
-email: support@render.com
+title: Advantage Geophysics
+email: info@advantagegeophysics.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Advantage Geophysics, Inc.(AGI) provides professional geologic and geophysical consulting services to commercial and public projects. 
+  Our professional staff are composed of skilled people with degrees and/or advanced degrees in geology and/or geophysics.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "https://jekyll.onrender.com" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: getrender
-github_username:  render
+url: "https://advantagegeophysics.onrender.com" # the base hostname & protocol for your site, e.g. http://example.com
+twitter_username: 
+github_username:  osheanman
 permalink: /:categories/:year/:month/:day/:title
 
 # Build settings
